# socx-cli

./: .coverage-tmp.html  .env  .gitignore  .pre-commit-config.yaml  .socx.yaml  .socx.yaml.example  404.html  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  RELEASING.md  cliff.toml  duties.py  index.html  index.md  install.html  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  pyrightconfig.json  ruff.toml  search.js  search.json  sitemap.xml  ty.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy-docs.yml  docs.yml  publish-to-pypi.yml  run-tests.yml
assets/rgr/inputs/: large  medium  small  tiny
blog/: index.html
changelog/: index.html
code_of_conduct/: index.html
concepts/: plugins.html
config/: git-changelog.toml  mypy.ini  ruff.toml  zensical.toml
config/vscode/: launch.json  settings.json  tasks.json
contributing/: index.html
credits/: index.html
css/: extra.css
development/: changelog.html  code_of_conduct.html  contributing.html  credits.html  license.html
docs/: CNAME  getting-started.md  index.md  installation.md  publish-to-pypi.md  quickstart.md
docs/.overrides/: main.html
docs/.overrides/partials/: comments.html
docs/concepts/: plugins.md
docs/css/: custom.css
docs/development/: changelog.md  code_of_conduct.md  contributing.md  credits.md  license.md
docs/examples/: full_schema.yaml  hello_world.yaml
docs/examples/my_package/my_subpackage/: my_script.py
docs/home/: quickstart.md
docs/plantuml/: manifest.puml
docs/reference/: api.md  cli.md  configuration.md  showcase.md
docs/stylesheets/: extra.css
docs/user-guide/: cli.md  configuration.md  overview.md  plugins.md  quickstart.md  regression.md
examples/: full_schema.yaml
home/: changelog.html  credits.html  license.html  quickstart.html
license/: index.html
quickstart/: index.html
reference/: api.html  api.md  configuration.html
reference/api/: index.html  index.md
scripts/: gen_credits.py  make.py
search/: search_index.js  search_index.json
site/search/: search_index.json
src/socx/: __config.py  __init__.py  __main__.py  _config.py  config.py  console.py  converter.py  decorators.py  log.py  mixins.py  reader.py  tokenizer.py  writer.py
src/socx/cli/: __init__.py  _cli.py  _jinja.py  _params.py  _types.py  callbacks.py  cfg.py  cli.py  options.py  params.py  plugin.py  repl.py  types.py
src/socx/config/: __init__.py  _config.py  _paths.py  _settings.py  converters.py  encoders.py  formatters.py  metadata.py  paths.py  serializers.py  validators.py
src/socx/config/schema/: __init__.py  cli.py  plugin.py  types.py
src/socx/config/schema/git/: __init__.py  git.py  manifest.py
src/socx/core/: __init__.py  _paths.py  encoder.py  enums.py  funcs.py  paths.py  serializer.py
src/socx/git/: __init__.py  _git.py  _manifest.py  _ssh.py
src/socx/io/: __init__.py  console.py  decorators.py  log.py
src/socx/mixins/: __init__.py  meta.py  mixins.py
src/socx/patterns/: __init__.py  visitor.py
src/socx/patterns/mixins/: __init__.py  proxy.py  uid.py
src/socx/patterns/singleton/: __init__.py  singleton.py
src/socx/patterns/visitor/: __init__.py  protocol.py  traversal.py
src/socx/regression/: __init__.py  regression.py  status.py  test.py  validator.py
src/socx/server/: __init__.py  job.py  server.py  status.py
src/socx/static/settings/: cli.yaml  console.yaml  convert.yaml  filetypes.yaml  git.yaml  jinja.yaml  lang.yaml  plugins.toml  plugins.yaml  plugins_help.yaml  regression.toml  regression.yaml  rich_click.yaml  settings.toml  settings.yaml  svgen.yaml  templates.yaml
src/socx/utils/: __init__.py  decorators.py
src/socx_patches/: post_process_sim_log.py
src/socx_plugins/: __init__.py  _env.py  _rgr.py  config.py  convert.py  env.py  example.py  git.py  plugin.py  rgr.py  ui.py  version.py
src/socx_plugins/config/: __init__.py  _config.py  edit.py  get.py
src/socx_plugins/convert/: __init__.py  converter.py  formatter.py  memory.py  parser.py  reader.py  tokenizer.py  validators.py  writer.py
src/socx_plugins/git/: __init__.py  _cli.py  arguments.py  callbacks.py  cli.py  manifest.py  renderables.py  summary.py  utils.py
src/socx_plugins/plugin/: __init__.py  example.py  schema.py
src/socx_plugins/regression/: _cli.py  _params.py  cli.py
src/socx_plugins/rgr/: __init__.py  _rgr.py  callbacks.py  pixie_test.py  post_process_sim_log.py  rgr.py
src/socx_plugins/svgen/: __init__.py
src/socx_plugins/version/: __init__.py  __main__.py
src/socx_tui/: __init__.py  __main__.py  app.py  containers.py  screens.py
src/socx_tui/bindings/: __init__.py
src/socx_tui/bindings/vim/: __init__.py  mode.py  vim.py
src/socx_tui/mixins/: __init__.py  composable.py
src/socx_tui/modes/: vim.py
src/socx_tui/regression/: __init__.py  __main__.py  _visitor.py  app.py  preview.py  screens.py  table.py  visitor.py
src/socx_tui/regression/bindings/: __init__.py
src/socx_tui/regression/bindings/vim/: __init__.py  mode.py  vim.py
src/socx_tui/regression/mixins/: __init__.py
src/socx_tui/regression/regression/: __init__.py
tests/: test_cli.py  test_git_schema.py  test_repl.py  test_server.py  test_uid.py
user-guide/: cli.html  configuration.html  overview.html  plugins.html  quickstart.html  regression.html
user-guide/cli/: index.html
user-guide/configuration/: index.html
user-guide/plugins/: index.html
user-guide/regression/: index.html
