# -----------------------------------------------------------------------------
# Build System
# -----------------------------------------------------------------------------

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["src/socx", "src/socx_tui", "src/socx_plugins"]

[tool.hatch.build.targets.wheel]
packages = ["src/socx", "src/socx_tui", "src/socx_plugins"]

[tool.hatch.build.targets.binary]
packages = ["src/socx", "src/socx_tui", "src/socx_plugins"]

# -----------------------------------------------------------------------------
# Entry Points
# -----------------------------------------------------------------------------

[project.scripts]
socx = 'socx.__main__:main'

[project.gui-scripts]
socx = 'socx.__main__:main'

[project.entry-points."pipx.run"]
socx = 'socx.__main__:main'

[project.entry-points."uvx.run"]
socx = 'socx.__main__:main'

# -----------------------------------------------------------------------------
# Project Metadata
# -----------------------------------------------------------------------------

[project]
name = "socx-cli"
readme = "README.md"
version = "0.4.4.dev1"
license = "Apache-2.0 OR MIT"
authors = [{ name = "Sagi Kimhi", email = "sagi.kim5@gmail.com" }]
maintainers = [{ name = "Sagi Kimhi", email = "sagi.kim5@gmail.com" }]
description = "System on chip verification and tooling infrastructure."
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "pip",
    "rich",
    "httpx",
    "click",
    "pandas",
    "trogon",
    "jinja2",
    "psutil",
    "uvloop",
    "hoptex",
    "textual",
    "dynaconf",
    "paramiko",
    "importlib",
    "gitpython",
    "rich-click",
    "platformdirs",
    "textual-serve",
    "textual-speedups",
    "textual-terminal",
    "textual-fspicker",
    "textual-filedrop",
    "python-dotenv[cli]",
    "importlib-metadata",
    "textual-autocomplete",
    "textual-universal-directorytree",
    "pydantic-settings>=2.10.1,<2.11.0",
]

[project.urls]
Home = "https://bitbucket.org/wiliot/socx-cli"
Issues = "https://bitbucket.org/wiliot/socx-cli/issues"
Jira-Issues = "https://bitbucket.org/wiliot/socx-cli/jira"

[dependency-groups]
dev = [
    "ruff",
    "twine",
    "build",
    "hatch",
    "pytest",
    "docify",
    "debugpy",
    "pydantic",
    "hatchling",
    "pyupgrade",
    "pre-commit",
    "pytest-cov",
    "pydocstyle",
    "pycodestyle",
    "textual-dev",
    "basedpyright",
    "flake8-bugbear",
    "flake8-simplify",
    "textual-fastdatatable",
]

# -----------------------------------------------------------------------------
# Tool Configurations
# -----------------------------------------------------------------------------

[tool.uv]
package = true
managed = true


[tool.pytest.ini_options]
testpaths = ["tests"]
