# -----------------------------------------------------------------------------
# Build System
# -----------------------------------------------------------------------------

[build-system]
requires = ["hatchling>=1.24.2", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"

# -----------------------------------------------------------------------------
# Entry Points
# -----------------------------------------------------------------------------

[project.scripts]
socx = 'socx.__main__:main'

[project.gui-scripts]
socx = 'socx.__main__:main'

[project.entry-points."pipx.run"]
socx = 'socx.__main__:main'

[project.entry-points."uvx.run"]
socx = 'socx.__main__:main'

# -----------------------------------------------------------------------------
# Project Metadata
# -----------------------------------------------------------------------------

[project]
name = "socx-cli"
readme = "README.md"
version = "0.5.6"
license = "Apache-2.0 OR MIT"
authors = [{ name = "Sagi Kimhi", email = "sagi.kim5@gmail.com" }]
maintainers = [{ name = "Sagi Kimhi", email = "sagi.kim5@gmail.com" }]
description = "System on chip verification and tooling infrastructure."
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
    "Topic :: Utilities",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "License :: OSI Approved :: Apache Software License",
    "Environment :: Console",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "uv",
    "pip",
    "rich",
    "click",
    "jinja2",
    "psutil",
    "hoptex",
    "textual",
    "pydantic",
    "dynaconf",
    "paramiko",
    "gitpython",
    "rich-click",
    "platformdirs",
    "textual-speedups",
    "universal-pathlib",
    "typer>=0.19.1",
]

[project.urls]
Issues = "https://github.com/sagikimhi/socx-cli/issues"
Homepage = "https://sagikimhi.github.io/socx-cli"
Changelog = "https://sagikimhi.github.io/socx-cli/changelog"
Repository = "https://github.com/sagikimhi/socx-cli"
Discussions = "https://github.com/sagikimhi/socx-cli/discussions"
Documentation = "https://sagikimhi.github.io/socx-cli"

[dependency-groups]
dev = [
    "ruff",
    "twine",
    "build",
    "hatch",
    "pytest",
    "deptry",
    "debugpy",
    "pyupgrade",
    "pre-commit",
    "pytest-cov",
    "textual-dev",
    "duty>=1.6.3",
    "mypy>=1.18.2",
    "hatch-uvenv",
]
docs = [
    "mike",
    "mkdocs",
    "pygments",
    "markdown-exec",
    "markdown-callouts",
    "pymdown-extensions",
    "mkdocs-macros-plugin",
    "mkdocs-llmstxt>=0.4.0",
    "mkdocs-coverage",
    "mkdocs-material[imaging]",
    "mkdocstrings[python]",
    "mkdocs-section-index",
    "mkdocs-material-extensions",
    "mkdocs-git-revision-date-localized-plugin",
    "tomli>=2.0; python_version < '3.11'",
]


# -----------------------------------------------------------------------------
# Tool Configurations
# -----------------------------------------------------------------------------

[tool.uv]
package = true
managed = true
default-groups = ["dev", "docs"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.env]
require = ["hatch-uvenv"]

[tool.hatch.envs.default]
type = "uvenv"
installer = "uv"

[tool.hatch.build.targets.sdist]
packages = ["src/socx", "src/socx_tui", "src/socx_plugins"]

[tool.hatch.build.targets.wheel]
packages = ["src/socx", "src/socx_tui", "src/socx_plugins"]

[tool.hatch.build.targets.binary]
packages = ["src/socx", "src/socx_tui", "src/socx_plugins"]
